Fixes issue #1839 - Avoid looking for standard encodings (#1840)